Failed to choose Interface font from path containing non-ascii characters #42069

Closed
opened 2014-10-04 08:57:27 +02:00 by Leon Cheung · 9 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.72 a1d80b9

Short description of error
When choosing font from path or the font file name itself contains non-ascii characters (CJK characters for example, like "D:\folder\中文路径\fontname.ttf"), it would fail to load or display somehow.

Exact steps for others to reproduce the error

font_browse.jpg
t3.jpg

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.72 a1d80b9 **Short description of error** When choosing font from path or the font file name itself contains non-ascii characters (CJK characters for example, like "D:\folder\中文路径\fontname.ttf"), it would fail to load or display somehow. **Exact steps for others to reproduce the error** ![font_browse.jpg](https://archive.blender.org/developer/F114605/font_browse.jpg) ![t3.jpg](https://archive.blender.org/developer/F114607/t3.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @mont29

Added subscriber: @mont29

Windows and string encodings… sigh.

Windows and string encodings… sigh.
Campbell Barton was assigned by Bastien Montagne 2014-10-04 12:14:50 +02:00

Campbell, think you did some related fix recently, mind having a look at that one too?

Campbell, think you did some related fix recently, mind having a look at that one too?

Suspect this is an issue opening files using char *, since we're using FT_New_Face.

Probably the fix for windows is not to use regular file open, and call BLI_fopen, read the data, then call FT_New_Memory_Face.

Needs to be tested though.

Suspect this is an issue opening files using `char *`, since we're using `FT_New_Face`. Probably the fix for windows is not to use regular file open, and call `BLI_fopen`, read the data, then call `FT_New_Memory_Face`. Needs to be tested though.

This issue was referenced by bae5826b65

This issue was referenced by bae5826b65412ebfa354d34024af971e94cd1839

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bae5826b65.

Closed by commit bae5826b65.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42069
No description provided.