Fix T42069: Fonts /w non-ascii paths fail in win32

Workaround freetype's use of fopen by swapping FT_New_Face for our own version which uses BLI_fopen.